[package]
name = "portait-back"
version = "0.0.0"
edition = "2021"
authors = ["Ole Donnermeyer <hi@cloudybyte.net>", "Oskar Döls <oskar@doels.ch>"]
publish = false


[dependencies]
actix-web = "4"
argon2 = {version = "0.4", features = ["std"]}
rand_core = { version = "0.6", features = ["std"] }
anyhow = "1"
dotenv = "0.15"
envy = "0.4"
serde = "1"
serde_json = "1"
sqlx = { version = "0.6", features = ["chrono", "macros", "migrate", "offline", "postgres", "runtime-actix-rustls", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
log = "0.4"
pretty_env_logger = "0.4"
uuid = { version = "1.1", features = ["serde", "v4"] }