[package]
name = "portait-back"
version = "0.0.0"
edition = "2021"
authors = ["Ole Donnermeyer <hi@cloudybyte.net>", "Oskar Döls <oskar@doels.ch>"]
publish = false


[dependencies]
actix-web = "4"
actix-multipart = "0.4"
anyhow = "1"
argon2 = { version = "0.4", features = ["std"] }
aws-sdk-s3 = "0.14"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
envy = "0.4"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
hyper = { version = "0.14", features = ["stream"] }
infer = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.6", features = ["chrono", "macros", "migrate", "offline", "postgres", "runtime-actix-rustls", "uuid"] }
thiserror = "1"
log = "0.4"
pretty_env_logger = "0.4"
uuid = { version = "1", features = ["serde", "v4"] }
